Can detect 7poker

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -13,10 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Start!"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:fontFamily="monospace"
+        android:text="asdfasdf"
+        android:letterSpacing="-0.05"
+        android:textSize="30sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -27,7 +29,7 @@
         android:layout_height="0dp"
         android:padding="2dp"
         android:contentDescription="Card 1"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintEnd_toStartOf="@id/card2"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +41,7 @@
         android:layout_height="0dp"
         android:padding="2dp"
         android:contentDescription="Card 2"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintEnd_toStartOf="@+id/card3"
         app:layout_constraintStart_toEndOf="@id/card1"
@@ -51,7 +53,7 @@
         android:layout_height="0dp"
         android:padding="2dp"
         android:contentDescription="Card 3"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintEnd_toStartOf="@id/card4"
         app:layout_constraintStart_toEndOf="@id/card2"
@@ -63,7 +65,7 @@
         android:layout_height="0dp"
         android:padding="2dp"
         android:contentDescription="Card 4"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintEnd_toStartOf="@id/card5"
         app:layout_constraintStart_toEndOf="@id/card3"
@@ -75,7 +77,7 @@
         android:layout_height="0dp"
         android:padding="2dp"
         android:contentDescription="Card 5"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/card4"
@@ -84,6 +86,8 @@
     <Button
         android:id="@+id/btn_shuffle"
         android:text="Good Luck"
+        android:fontFamily="monospace"
+        android:letterSpacing="-0.05"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
