--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Start!"
         android:textStyle="bold"
-        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:fontFamily="monospace"
+        android:letterSpacing="-0.05"
+        android:textSize="30sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -26,7 +28,7 @@
         android:layout_height="0dp"
         android:layout_margin="2dp"
         android:contentDescription="Card 1"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintEnd_toStartOf="@id/card2"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +40,7 @@
         android:layout_height="0dp"
         android:layout_margin="2dp"
         android:contentDescription="Card 2"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintStart_toEndOf="@id/card1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +52,7 @@
         android:layout_height="0dp"
         android:layout_margin="2dp"
         android:contentDescription="Card 3"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/card1"
@@ -62,7 +64,7 @@
         android:layout_height="0dp"
         android:layout_margin="2dp"
         android:contentDescription="Card 4"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintEnd_toStartOf="@id/card5"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +76,7 @@
         android:layout_height="0dp"
         android:layout_margin="2dp"
         android:contentDescription="Card 5"
-        android:src="@drawable/c_10_of_spades"
+        android:src="@drawable/c_black_joker"
         app:layout_constraintTop_toBottomOf="@id/card3"
         app:layout_constraintStart_toEndOf="@id/card4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,6 +86,8 @@
     <Button
         android:id="@+id/btn_shuffle"
         android:text="Good Luck"
+        android:fontFamily="monospace"
+        android:letterSpacing="-0.05"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
