--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -16,12 +16,22 @@
         android:textStyle="bold"
         android:textColor="@color/white"
         android:fontFamily="monospace"
-        android:text="asdfasdf"
+        android:text="main"
         android:letterSpacing="-0.05"
         android:textSize="30sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn_show"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_marginRight="5dp"
+        android:text="i"
+        app:layout_constraintTop_toTopOf="@id/mainText"
+        app:layout_constraintBottom_toBottomOf="@id/mainText"
+        app:layout_constraintEnd_toEndOf="@+id/mainText"/>
 
     <ImageView
         android:id="@+id/card1"
@@ -30,7 +40,7 @@
         android:padding="2dp"
         android:contentDescription="Card 1"
         android:src="@drawable/c_black_joker"
-        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintBottom_toTopOf="@id/btn_simulation"
         app:layout_constraintEnd_toStartOf="@id/card2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainText" />
@@ -42,7 +52,7 @@
         android:padding="2dp"
         android:contentDescription="Card 2"
         android:src="@drawable/c_black_joker"
-        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintBottom_toTopOf="@id/btn_simulation"
         app:layout_constraintEnd_toStartOf="@+id/card3"
         app:layout_constraintStart_toEndOf="@id/card1"
         app:layout_constraintTop_toBottomOf="@id/mainText" />
@@ -54,7 +64,7 @@
         android:padding="2dp"
         android:contentDescription="Card 3"
         android:src="@drawable/c_black_joker"
-        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintBottom_toTopOf="@id/btn_simulation"
         app:layout_constraintEnd_toStartOf="@id/card4"
         app:layout_constraintStart_toEndOf="@id/card2"
         app:layout_constraintTop_toBottomOf="@id/mainText" />
@@ -66,7 +76,7 @@
         android:padding="2dp"
         android:contentDescription="Card 4"
         android:src="@drawable/c_black_joker"
-        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintBottom_toTopOf="@id/btn_simulation"
         app:layout_constraintEnd_toStartOf="@id/card5"
         app:layout_constraintStart_toEndOf="@id/card3"
         app:layout_constraintTop_toBottomOf="@id/mainText" />
@@ -78,17 +88,29 @@
         android:padding="2dp"
         android:contentDescription="Card 5"
         android:src="@drawable/c_black_joker"
-        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintBottom_toTopOf="@id/btn_simulation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/card4"
         app:layout_constraintTop_toBottomOf="@id/mainText" />
 
     <Button
-        android:id="@+id/btn_shuffle"
-        android:text="Good Luck"
+        android:id="@+id/btn_simulation"
+        android:text="GO Fast(+100000)"
         android:fontFamily="monospace"
         android:letterSpacing="-0.05"
-        android:layout_margin="8dp"
+        android:enabled="true"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn_shuffle"
+        android:text="Good Luck(+1)"
+        android:fontFamily="monospace"
+        android:letterSpacing="-0.05"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
