--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:text="main"
         android:textColor="@color/black"
         android:fontFamily="monospace"
         android:letterSpacing="-0.05"
@@ -21,6 +22,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn_show"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_marginRight="5dp"
+        android:text="i"
+        app:layout_constraintTop_toTopOf="@id/mainText"
+        app:layout_constraintBottom_toBottomOf="@id/mainText"
+        app:layout_constraintEnd_toEndOf="@+id/mainText"/>
 
     <ImageView
         android:id="@+id/card1"
@@ -50,12 +61,12 @@
         android:id="@+id/card3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="2dp"
+
         android:contentDescription="Card 3"
         android:src="@drawable/c_black_joker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card1"
+        app:layout_constraintTop_toBottomOf="@id/card2"
         app:layout_constraintBottom_toTopOf="@id/card4"/>
 
     <ImageView
@@ -65,10 +76,10 @@
         android:layout_margin="2dp"
         android:contentDescription="Card 4"
         android:src="@drawable/c_black_joker"
-        app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
+        app:layout_constraintBottom_toTopOf="@id/btn_simulation"
         app:layout_constraintEnd_toStartOf="@id/card5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card3"/>
+        app:layout_constraintTop_toBottomOf="@id/card3" />
 
     <ImageView
         android:id="@+id/card5"
@@ -77,22 +88,34 @@
         android:layout_margin="2dp"
         android:contentDescription="Card 5"
         android:src="@drawable/c_black_joker"
-        app:layout_constraintTop_toBottomOf="@id/card3"
-        app:layout_constraintStart_toEndOf="@id/card4"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/card4"
+        app:layout_constraintTop_toBottomOf="@id/card3" />
 
     <Button
-        android:id="@+id/btn_shuffle"
-        android:text="Good Luck"
+        android:id="@+id/btn_simulation"
+        android:text="Go Fast(+100000)"
         android:fontFamily="monospace"
         android:letterSpacing="-0.05"
-        android:layout_margin="8dp"
-        android:layout_width="match_parent"
+        android:layout_margin="5dp"
+        android:layout_width="0dp"
+        android:enabled="true"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_shuffle" />
+
+    <Button
+        android:id="@+id/btn_shuffle"
+        android:text="Good Luck(+1)"
+        android:fontFamily="monospace"
+        android:letterSpacing="-0.05"
+        android:layout_margin="5dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_simulation"
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
