--- a/app/src/main/res/layout/result_dialog.xml
+++ b/app/src/main/res/layout/result_dialog.xml
@@ -15,6 +15,7 @@
             android:id="@+id/text_total"
             android:text="0"
             android:textSize="25sp"
+            android:fontFamily="monospace"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +25,7 @@
 
         <TextView
             android:id="@+id/royal_straight_flush"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Royal Straight Flush: "
@@ -35,7 +36,7 @@
             app:layout_constraintStart_toStartOf="parent" />
         <TextView
             android:id="@+id/royal_straight_flush_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="0"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -46,7 +47,7 @@
 
         <TextView
             android:id="@+id/back_straight_flush"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back Straight Flush:"
@@ -56,7 +57,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/back_straight_flush_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="1"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -67,7 +68,7 @@
 
         <TextView
             android:id="@+id/straight_flush"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Straight Flush:"
@@ -77,7 +78,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/straight_flush_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="2"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -88,7 +89,7 @@
 
         <TextView
             android:id="@+id/four_card"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Four Card:"
@@ -98,7 +99,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/four_card_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="3"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -109,7 +110,7 @@
 
         <TextView
             android:id="@+id/full_house"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Full House:"
@@ -119,7 +120,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/full_house_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="4"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -130,7 +131,7 @@
 
         <TextView
             android:id="@+id/flush"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Flush:"
@@ -140,7 +141,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/flush_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="5"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -151,7 +152,7 @@
 
         <TextView
             android:id="@+id/mountain"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mountain:"
@@ -161,7 +162,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/mountain_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="6"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -172,7 +173,7 @@
 
         <TextView
             android:id="@+id/back_straight"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back Straight:"
@@ -182,7 +183,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/back_straight_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="7"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -193,7 +194,7 @@
 
         <TextView
             android:id="@+id/straight"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Straight:"
@@ -203,7 +204,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/straight_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="8"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -214,7 +215,7 @@
 
         <TextView
             android:id="@+id/triple"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Triple:"
@@ -224,7 +225,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/triple_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="9"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -235,7 +236,7 @@
 
         <TextView
             android:id="@+id/two_pair"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Two Pair:"
@@ -245,7 +246,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/two_pair_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="10"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -256,7 +257,7 @@
 
         <TextView
             android:id="@+id/one_pair"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="One Pair:"
@@ -266,7 +267,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/one_pair_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="11"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -277,7 +278,7 @@
 
         <TextView
             android:id="@+id/top"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Top:"
@@ -287,7 +288,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/top_value"
-            android:visibility="visible"
+            android:fontFamily="monospace"
             android:text="12"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_width="wrap_content"
@@ -301,6 +302,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="확인"
+            android:fontFamily="monospace"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
