--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -18,7 +18,7 @@
         android:fontFamily="monospace"
         android:text="main"
         android:letterSpacing="-0.05"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -98,8 +98,8 @@
         android:text="GO Fast(+100000)"
         android:fontFamily="monospace"
         android:letterSpacing="-0.05"
-        android:enabled="true"
-        android:layout_width="0dp"
+        android:layout_margin="2dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/btn_shuffle"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
         android:text="Good Luck(+1)"
         android:fontFamily="monospace"
         android:letterSpacing="-0.05"
-        android:layout_margin="5dp"
+        android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
