--- a/app/src/main/res/layout/result_dialog.xml
+++ b/app/src/main/res/layout/result_dialog.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp">
 
         <TextView
             android:id="@+id/text_total"
